<?xml version="1.0" encoding="utf-8"?>

<!--        Constraint layout inside scrollview - elements are placed with constraints-->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".MainActivity"
    android:background="@color/bgDarkBlue">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvAmt"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/quesLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/won"
        android:background="@drawable/score_bg"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:gravity="center"/>

        <!--    Question 1-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:id="@+id/quesLayout"
        android:padding="10dp">

        <!--        Question 1-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_1"
            android:textSize="20sp"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/black"
            android:background="@drawable/button_bg"
            android:id="@+id/tvQuestion"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <!--        Options for Question -->
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rgOptions"
            android:background="@drawable/submit_bg">

            <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">
                <TableRow>
                    <RadioButton
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:id="@+id/rbOption1"
                        android:layout_height="wrap_content"
                        android:text="@string/option_1_a">
                    </RadioButton>
                    <RadioButton
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:id="@+id/rbOption2"
                        android:layout_height="wrap_content"
                        android:text="@string/option_1_b">
                    </RadioButton>
                </TableRow>

                <TableRow>
                    <RadioButton
                        android:layout_weight="1"
                        android:id="@+id/rbOption3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/option_1_c">
                    </RadioButton>
                    <RadioButton
                        android:layout_weight="1"
                        android:id="@+id/rbOption4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/option_1_d">
                    </RadioButton>
                </TableRow>
            </TableLayout>
        </RadioGroup>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:textColor="@color/white"
            android:background="@drawable/submit_bg"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:id="@+id/btnSubmit"
            android:onClick="Submit"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>